# yt2rss

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_automation.sh  run_server.py  run_tests.py
.github/workflows/: docker-publish.yml  tests.yml
src/: cron_runner.py  downloader.py  rss_generator.py  utils.py  web_server.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/: index.html
tests/: __init__.py  conftest.py  test_cron_runner.py  test_downloader.py  test_rss_generator.py  test_web_server.py
