[project]
name = "yt2rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler==3.10.4",
    "feedgen>=1.0.0",
    "feedparser>=6.0.11",
    "flask>=3.1.1",
    "pillow>=11.2.1",
    "pytest>=8.4.0",
    "pyyaml>=6.0.2",
    "yt-dlp>=2025.6.9",
]
